--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 					<div class="banner-info">
 						
 						<div class="banner-text text-center">
-							<h1 class="white">MCOMPANY</h1>
+							<h1 class="white">Medicina</h1>
 							<p>SERVIÇOS DE MEDICINA E SEGURANÇA DO TRABALHO</p>
 							<a href="#service" class="btn btn-appoint">Saiba Mais</a>
 						</div>
